# shipit

./: .dockerignore  .gitignore  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: release.yml
docs/llms/: accessories.md  agents-preamble.md  configuration.md  deploy.md  health-check.md  index.md  local.md  quickstart.md  rollback.md  secrets.md  setup.md  traefik.md
src/: main.rs
src/accessory/: mod.rs
src/cli/: accessory.rs  config_cmd.rs  deploy.rs  init.rs  llms.rs  local.rs  logs.rs  mod.rs  monitor.rs  releases.rs  rollback.rs  run.rs  secrets_cmd.rs  setup.rs
src/compose/: mod.rs
src/config/: mod.rs  validate.rs
src/deploy/: context.rs  mod.rs  steps.rs
src/llms/: mod.rs
src/local/: mod.rs
src/nixos/: mod.rs
src/os/: mod.rs
src/output/: mod.rs
src/release/: lock.rs  mod.rs
src/secrets/: key.rs  store.rs
src/ssh/: exec.rs  mod.rs
src/traefik/: mod.rs
src/wireguard/: mod.rs
templates/: docker-compose.override.yml.j2  shipit.nix.j2  shipit.toml.j2  traefik.service.j2  traefik.toml.j2
