[package]
name = "shipit"
version = "0.1.0"
edition = "2021"
description = "Deploy apps to VMs via Docker Compose + Traefik. Inspired by Capistrano."
license = "MIT"
repository = "https://github.com/marcelsud/shipit"
homepage = "https://github.com/marcelsud/shipit"
keywords = ["deploy", "docker", "traefik", "vm", "devops"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
openssh = { version = "0.11", features = ["native-mux"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
minijinja = { version = "2", features = ["loader"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
indicatif = "0.17"
console = "0.15"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
dialoguer = "0.11"
which = "7"
age = { version = "0.11", features = ["armor"] }
sha2 = "0.10"
hex = "0.4"
tempfile = "3"
dirs = "6"
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
